--- a/src/app/app.html
+++ b/src/app/app.html
@@ -26,9 +26,6 @@
       <button class="btn" (click)="undo()" [disabled]="!canUndo()">{{ 'controls.undo' | t }}</button>
       <button class="btn" (click)="redo()" [disabled]="!canRedo()">{{ 'controls.redo' | t }}</button>
       <button class="btn danger" (click)="clearAll()" [disabled]="!coords().length">{{ 'controls.clear' | t }}</button>
-      <button class="btn" (click)="copyJSON()" [disabled]="!coords().length">{{ 'controls.copyJson' | t }}</button>
-      <button class="btn" (click)="downloadJSON()"
-        [disabled]="!coords().length">{{ 'controls.downloadJson' | t }}</button>
       <button class="btn" (click)="downloadAnnotatedPDF()"
         [disabled]="!coords().length || !pdfDoc">{{ 'controls.downloadPdf' | t }}</button>
     </div>
@@ -115,6 +112,10 @@
       [placeholder]="'sidebar.jsonPlaceholder' | t"
       spellcheck="false"
     ></textarea>
+    <div class="json-toolbar">
+      <button class="btn" (click)="copyJSON()" [disabled]="!coords().length">{{ 'controls.copyJson' | t }}</button>
+      <button class="btn" (click)="downloadJSON()" [disabled]="!coords().length">{{ 'controls.downloadJson' | t }}</button>
+    </div>
     <small class="sidebar-hint">{{ 'sidebar.jsonHint' | t }}</small>
   </aside>
 
